--- a/Nequi/frontend/nequi-codum/src/index.css
+++ b/Nequi/frontend/nequi-codum/src/index.css
@@ -12,3 +12,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.button{
+	align-content: center;
+	width: 20%;
+}
+
+#As{
+background: green;
+}
